# aml-labs

./: .gitignore  README.md  pyproject.toml
1-computer-vision-lab/: Fine_tune_copy (1).ipynb  cnn-visualization.ipynb  getting_started.ipynb
2-language-models-lab/: 0-getting-started-with-RNN.ipynb  1-Word2vec-CBOW.ipynb  2-Wor2Vec-SkipGram.ipynb  3-textclassification.ipynb  4-citty-prediction.ipynb  4-sentiment-classification.ipynb  5-huggingface-q-and-a.ipynb  6-text-generation.ipynb  huggingface-q-and-a.ipynb
3-generative-models-lab/: 0-getting-started-with-generative-models.ipynb  1-VAE.ipynb  2-interpolate-in-latent-space.ipynb  2-latentspace-interpolation.ipynb  3-SVHN-vae.ipynb  4-GAN.ipynb  GAN.ipynb  cVAE.ipynb  inpainting-gan.ipynb
src/: helpers.py
