[tool.poetry]
name = "mau-aml-labs"
version = "0.1.0"
description = ""
authors = ["Nigel Grech <nigel.grech@husqvarnagroup.com>"]

[tool.poetry.dependencies]
python = "^3.8"
torchvision = "^0.12.0"
torch = "^1.11.0"
torchtext = "^0.12.0"
matplotlib = "^3.5.1"
ipykernel = "^6.13.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"