[tool.poetry]
name = "mau-aml-labs"
version = "0.1.0"
description = ""
authors = ["Nigel Grech <nigel.grech@husqvarnagroup.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.4.2"
numpy = "^1.22.3"
matplotlib = "^3.5.1"
plotly = "^5.7.0"
seaborn = "^0.11.2"
Pillow = "^9.1.0"
requests = "^2.27.1"
tqdm = "^4.64.0"
boto3 = "^1.22.0"
regex = "^2022.4.24"
sentencepiece = "^0.1.96"
sacremoses = "^0.0.49"
transformers = "^4.18.0"
ipykernel = "^6.13.0"
ipywidgets = "^7.7.0"
prettytable = "^3.2.0"
sklearn = "^0.0"
scikit-image = "^0.19.2"
torchsummary = "^1.5.1"
opencv-python = "^4.5.5"
split-folder = "^0.1.1"
split-folders = {extras = ["full"], version = "^0.5.1"}


[tool.poetry.dev-dependencies]
poethepoet = "^0.13.1"


[tool.poe.tasks]
win_cuda = "poetry run pip3 install torch torchvision torchaudio torchtext torchdata --extra-index-url https://download.pytorch.org/whl/cu113"
win_cpu = "poetry run pip3 install torch torchvision torchaudio torchtext torchdata"
mac_cpu = "poetry run pip3 install torch torchvision torchaudio torchtext torchdata"
linux_cuda = "poetry run pip3 install torch torchvision torchaudio torchtext torchdata --extra-index-url https://download.pytorch.org/whl/cu113"
linus_cpu = "poetry run pip3 install torch torchvision torchaudio torchtext torchdata --extra-index-url https://download.pytorch.org/whl/cpu"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"